@@ -173,6 +173,17 @@ abstract class IsotopePayment extends Frontend
 
 
 	/**
+	 * Check whether a property is set
+	 * @param string
+	 * @return boolean
+	 */
+	public function __isset($strKey)
+	{
+		return isset($this->arrData[$strKey]);
+	}
+
+
+	/**
 	 * Return a list of buttons for the table row in backend
 	 *
 	 * @access public
